# shiva

./: .appveyor.yml  .coveralls.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE  README.md
cmake/: buildtype.cmake  compiler.cmake  compiler_utility.cmake  coverage.cmake  directory.cmake  library.cmake  module.cmake  platform.cmake  properties.cmake  shiva-box2d-config.cmake.in  shiva-config.cmake.in  shiva-imgui-config.cmake.in  shiva-sfml-config.cmake.in  source_group_utils.cmake  test_features.cmake  unit_tests.cmake  x64-shiva-triplet.cmake  x64-windows-shiva.cmake
cmake/tests/: test_color.cmake
editor/: CMakeLists.txt
editor/sources/: IconsFontAwesome5.h  editor.cpp  editor.hpp  editor_gui.cpp  editor_gui.hpp  main.cpp
editor/sources/widgets/: widget_top_bar.hpp  widgets.hpp
editor/systems_scripts/: widget_top_bar_system.lua
examples/: CMakeLists.txt
examples/common/: CMakeLists.txt  CMakeSources.cmake
examples/quick_start/: CMakeLists.txt  quick_start.cpp
examples/sfml/: CMakeLists.txt  bheet_arrival.json  game_scene.lua  intro_scene.lua  player.lua  sfml-example.cpp  sfml-example.hpp  sfml_config.json  sprite_scene.lua
examples/world/: CMakeLists.txt  world-example.cpp  world-example.hpp
modules/: CMakeLists.txt
modules/box2d/: CMakeLists.txt  CMakeSources.cmake
modules/box2d/shiva/box2d/: box2d_component.hpp  system-box2d.cpp  system-box2d.hpp
modules/dll/: CMakeLists.txt  CMakeSources.cmake
modules/dll/shiva/dll/: dll.hpp  plugin_registry.hpp  plugins_registry.hpp
modules/ecs/: CMakeLists.txt  CMakeSources.cmake
modules/ecs/shiva/ecs/: base_system.hpp  ecs.hpp  opaque_data.hpp  system.hpp  system_manager.hpp  system_manager.hpp~  system_type.hpp  using_alias_library.hpp
modules/ecs/shiva/ecs/components/: all.hpp  animation.hpp  drawable.hpp  layer.hpp  lua_script.hpp  physics_2d.hpp  transform_2d.hpp  video.hpp
modules/ecs/shiva/ecs/details/: system_type_traits.hpp  utils.hpp
modules/entt/: CMakeLists.txt  CMakeSources.cmake
modules/entt/shiva/entt/: CMakeSources.cmake  entt.hpp  entt_config.hpp
modules/entt/shiva/entt_shared/: CMakeSources.cmake  entt_shared.cpp  entt_shared.hpp
modules/enums/: CMakeLists.txt  CMakeSources.cmake
modules/error/: CMakeLists.txt  CMakeSources.cmake
modules/error/shiva/error/: expected.hpp  general_error_handler.hpp  shiva_error_code.cpp  shiva_error_code.hpp
modules/event/: CMakeLists.txt  CMakeSources.cmake
modules/filesystem/: CMakeLists.txt  CMakeSources.cmake
modules/filesystem/shiva/filesystem/: filesystem.hpp
modules/imgui/: CMakeLists.txt  CMakeSources.cmake
modules/imgui/shiva/imgui/: imgui_iterator.inl  imgui_lua_bindings.cpp  system-imgui.cpp  system-imgui.hpp
modules/input/: CMakeLists.txt  CMakeSources.cmake
modules/json/: CMakeLists.txt  CMakeSources.cmake
modules/json/shiva/json/: json.hpp
modules/lua/: CMakeLists.txt  CMakeSources.cmake
modules/lua/shiva/lua/: lua.hpp  lua_helpers.hpp  lua_scripted_system.hpp  lua_system.hpp  scripted_system.hpp
modules/lua/shiva/lua/details/: lua_scripted_system.hpp
modules/python/: CMakeLists.txt  CMakeSources.cmake
modules/python/shiva/python/: python.hpp  python_scripted_system.hpp  python_system.hpp
modules/ruby/: CMakeLists.txt  CMakeSources.cmake
modules/ruby/shiva/ruby/: ruby_system.hpp
modules/sfml/: CMakeLists.txt
modules/sfml/shiva/sfml/animation/: CMakeSources.cmake  system-sfml-animation.cpp  system-sfml-animation.hpp
modules/sfml/shiva/sfml/common/: CMakeSources.cmake  animation_component_impl.hpp  animation_config.hpp  drawable_component_impl.hpp
modules/sfml/shiva/sfml/components/: CMakeSources.cmake  components.hpp  sprite.hpp
modules/sfml/shiva/sfml/event/: CMakeSources.cmake  set_render_window.hpp
modules/sfml/shiva/sfml/graphics/: CMakeSources.cmake  system-sfml-graphics.cpp  system-sfml-graphics.hpp  window_config.hpp
modules/sfml/shiva/sfml/inputs/: CMakeSources.cmake  system-sfml-inputs.cpp  system-sfml-inputs.hpp
modules/sfml/shiva/sfml/resources/: CMakeSources.cmake  entt-sfml-loader.hpp  sfml-resources-registry.hpp  system-sfml-resources.cpp  system-sfml-resources.hpp  taskflow.hpp
modules/sfml/shiva/sfml/video/: CMakeSources.cmake  system-sfml-video.cpp  system-sfml-video.hpp  video_component_impl.hpp
modules/spdlog/: CMakeLists.txt  CMakeSources.cmake
modules/spdlog/shiva/spdlog/: spdlog.hpp
scripts/: ctest-to_junit.xsl  generate_solution_windows.ps1  jenkins.ps1  run_unix.sh  update_solution_windows.ps1  upload_result_coverage.ps1
tests/: CMakeLists.txt
tests/ecs-test/: CMakeLists.txt  ecs-test.cpp
tests/ecs-test/plugins/: system_plugged_bar.cpp  system_plugged_bar.hpp
tests/scripting-lua-test/: CMakeLists.txt  script-lua-test.cpp
tests/scripting-lua-test/scripts/lua/: basic_tests.lua
tests/scripting-lua-test/scripts/systems/lua/: pre_example_system.lua
tests/scripting-lua-test/scripts_lua_tests/: basic_tests.lua  example_system.lua
tests/scripting-lua-test/scripts_lua_tests/systems/: logic_example_system.lua  post_example_system.lua  pre_example_system.lua
tests/scripting-python-test/: CMakeLists.txt  script-python-test.cpp
tests/scripting-python-test/scripts/python/: basic_tests.py
tests/scripting-python-test/scripts/systems/python/: post_example_system.py
tests/scripting-python-test/scripts_python_tests/: basic_tests.py
tests/scripting-python-test/scripts_python_tests/systems/: logic_example_system.py  pre_example_system.py
tools/: cli_shiva.py
tools/game_templates/sfml/: CMakeLists.txt
tools/game_templates/sfml/assets/scripts/scenes/lua/: game_scene.lua  intro_scene.lua
tools/game_templates/sfml/assets/videos/intro_scene/: intro.avi
tools/game_templates/sfml/cmake/: color.cmake  compiler_utility.cmake  coverage.cmake  platform.cmake  source_group_utils.cmake  unit_tests.cmake
tools/game_templates/sfml/config/: sfml_config.json
tools/game_templates/sfml/project_name/: main.cpp
tools/game_templates/sfml/project_name/world/: project_name_world.cpp  project_name_world.hpp
(+81 files in other folders)
