if (SHIVA_USE_BOX2D)
    find_package(unofficial-box2d CONFIG REQUIRED)
    include(CMakeSources.cmake)
    set(MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
    CREATE_MODULE_PLUGIN(shiva::shiva-system-box2d "${MODULE_SOURCES}" ${MODULE_PATH} "systems" "box2d/shiva")
    target_link_libraries(shiva-system-box2d PRIVATE unofficial::box2d::Box2D shiva::ecs shiva::lua)
    AUTO_TARGETS_PLUGINS_INSTALL(shiva-system-box2d shiva-box2d)
    PREPARE_MODULE_INSTALLATION(shiva-box2d)
endif()