include(CMakeSources.cmake)
set(MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
find_package(Boost COMPONENTS system filesystem REQUIRED)
CREATE_MODULE(shiva::filesystem "${MODULE_SOURCES}" ${MODULE_PATH})
target_link_libraries(filesystem INTERFACE Boost::boost Boost::filesystem)
AUTO_TARGETS_MODULE_INSTALL(filesystem)