include(CMakeSources.cmake)
set(MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
CREATE_MODULE(shiva::lua "${MODULE_SOURCES}" ${MODULE_PATH})

if (EMSCRIPTEN)
    find_package(lua-emscripten CONFIG REQUIRED)
    set(LUA_LIBRARIES lua::lua-emscripten)
    get_target_property(sources lua::lua-emscripten INTERFACE_INCLUDE_DIRECTORIES)
    message("LOL -> ${sources}")
else()
    find_package(Lua 5.3)
    if (MSVC)
        find_file(LFSDLL lfs.dll PATH_SUFFIXES bin)
#        configure_file(${LFSDLL} ${CMAKE_SOURCE_DIR}/bin COPYONLY)
        file(COPY ${LFSDLL}
             DESTINATION ${CMAKE_SOURCE_DIR}/bin)
        message("lfs directory -> ${LFSDLL}")
    endif()
endif()

find_package(sol2 CONFIG REQUIRED)

target_link_libraries(lua INTERFACE shiva::ecs shiva::input ${LUA_LIBRARIES} sol2)
target_compile_options(lua INTERFACE $<$<CXX_COMPILER_ID:MSVC>:/bigobj /wd4324>)
if (NOT EMSCRIPTEN)
    target_include_directories(lua INTERFACE ${LUA_INCLUDE_DIR})
endif()
AUTO_TARGETS_MODULE_INSTALL(lua)
