include(CMakeSources.cmake)
set(MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})

find_package(Threads REQUIRED)
find_package(spdlog CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
CREATE_MODULE(shiva::shiva-spdlog "${MODULE_SOURCES}" ${MODULE_PATH} "spdlog")
target_link_libraries(shiva-spdlog INTERFACE spdlog::spdlog Threads::Threads fmt::fmt)
target_compile_options(shiva-spdlog INTERFACE $<$<CXX_COMPILER_ID:MSVC>:/wd4244 /wd4127>)
AUTO_TARGETS_MODULE_INSTALL(shiva-spdlog)
